<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/error_message"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
            app:layout_constraintEnd_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_poster" />

        <ProgressBar
            android:id="@+id/pb_loading_progress"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
            app:layout_constraintEnd_toEndOf="@+id/iv_movie_poster"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_poster"
            app:layout_constraintVertical_bias="0.506" />

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_thumbnail_content_description"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/label_vote_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_vote_count_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="92dp" />

        <TextView
            android:id="@+id/vote_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/vote_value_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/label_vote_count_tv"
            app:layout_constraintTop_toBottomOf="@+id/label_vote_count_tv"
            tools:text="3000" />

        <TextView
            android:id="@+id/average_vote_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/vote_value_size"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="40dp"
            tools:text="7.5" />

        <TextView
            android:id="@+id/release_date_tv"
            style="@style/TextAppearance.Compat.Notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/detail_tv_padding"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="16dp"
            tools:text="2017" />

        <TextView
            android:id="@+id/label_popularity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_popularity_label"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_text_size"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="148dp" />

        <TextView
            android:id="@+id/popularity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/vote_value_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/label_popularity_tv"
            app:layout_constraintTop_toBottomOf="@+id/label_popularity_tv"
            tools:text="40" />

    </android.support.constraint.ConstraintLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingEnd="45dp"
                android:paddingStart="23dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_overview_tv"
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_overview_label"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/overview_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/detail_tv_padding" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_original_language_tv"
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_original_language_label"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/original_language_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/detail_tv_padding" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_original_title_tv"
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_original_title_label"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/original_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/detail_tv_padding" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/row_margin_top"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_genres_tv"
                        android:layout_width="@dimen/label_width"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_genres_label"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genres_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/detail_tv_padding" />
                </LinearLayout>




            </LinearLayout>

        </ScrollView>

    </FrameLayout>
</layout>